--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <script src="./src/js/index.js"></script>
 
     <button type="button" onclick="copyTextToClipboard('holis')">copy</button>
+
+    <input />
   </body>
 </html>
