add share option

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   <body>
     <script src="./src/js/index.js"></script>
 
-    <button type="button" onclick="copyTextToClipboard('holis')">copy</button>
+    <button type="button" onclick="copyTextToClipboard('texto copiado')">
+      copy
+    </button>
+    <button
+      type="button"
+      onclick="shareText('este texto es el que se debe compartir')"
+    >
+      compartir
+    </button>
 
     <input />
   </body>
